* 2007-11-13 - marcus.klein@open-xchange.com

 - Bugfix #10117: Fixed moving problems.

* 2007-11-12 - thorben.betten@open-xchange.com

 - Bugfix #10121: Keep AJP connection alive on thrown error
 - Bugfix #10053: Forces to use base64 as 'Content-Transfer-Encoding' header
   to ensure data is kept as it is.
 - Bugfix #10117: Properly checks for duplicate folders on create/update/rename

* 2007-11-12 - martin.kauss@open-xchange.com

 - Fixed bug #10061. If a user changes an appointment in a shared folder
   all participants except the owner of the shared folder are remived.
   This has been fixed.

* 2007-11-08 - sebastian.kauss@open-xchange.com

 - Fixed bug #10119 - API does not return deleted items properly

* 2007-11-08 - martin.kauss@open-xchange.com

 * Fixed bug #10120. If a users creates a recurring appointment and an exception
   and deletes afterwards the exception the whole sequence is gone. This bug
   was produced in the bugfix phase and did never exist in a produvtive
   environmen.

* 2007-11-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10050 Database leftovers of deleted contexts

* 2007-11-06 - dennis.sieben@open-xchange.com

 - Bugfix #8919: [L3] 'checkconsistency' does not provide any usage information and
   does not work as well

* 2007-11-06 - thorben.betten@open-xchange.com

 - Bugfix #10034: Fixed moving of messages without UIDCOPY capability

* 2007-10-30 - francisco.laguna@open-xchange.com

 - Bugfix #9943: Added DeleteListener that removes all attachments on a ContextDelete.
   Added UpdateTask to clear leftover attachments.

* 2007-10-30 - sebastian.kauss@open-xchange.com

 - Bugfix #9888: Reminder never disappears for recurring appointment

* 2007-10-29 - marcus.klein@open-xchange.com

 - Bugfix #9869: Set default upload quota to infinity.
 - Bugfix #9826: Properly set charset in Content-Type for configuration jump.

* 2007-10-29 - thorben.betten@open-xchange.com
