@@ -521,13 +521,13 @@ public final class OXFolderManagerImpl implements OXFolderManager {
 		checkPermissionsAgainstSessionUserConfig(folderObj, userConfig, ctx);
 		checkFolderPermissions(folderObj, user.getId(), ctx);
 		checkPermissionsAgainstUserConfigs(folderObj, ctx);
-		if (folderObj.containsFolderName()) {
+		if (folderObj.containsFolderName() && !storageObj.getFolderName().equals(folderObj.getFolderName())) {
 			/*
-			 * Check if duplicate folder exists
+			 * Rename: Check if duplicate folder exists
 			 */
 			try {
-			    final int folderId = OXFolderSQL.lookUpFolder(storageObj.getParentFolderID(), folderObj.getFolderName(), folderObj
-                    .getModule(), readCon, ctx);
+				final int folderId = OXFolderSQL.lookUpFolderOnUpdate(folderObj.getObjectID(), storageObj
+						.getParentFolderID(), folderObj.getFolderName(), folderObj.getModule(), readCon, ctx);
 				if (folderId != -1 && folderId != folderObj.getObjectID()) {
 					/*
 					 * A duplicate folder exists
@@ -606,15 +606,14 @@ public final class OXFolderManagerImpl implements OXFolderManager {
 		 * Check for duplicate folder
 		 */
 		try {
-		    final int folderId = OXFolderSQL.lookUpFolder(storageObj.getParentFolderID(), folderObj.getFolderName(), storageObj
-                .getModule(), readCon, ctx);
+			final int folderId = OXFolderSQL.lookUpFolderOnUpdate(folderObj.getObjectID(), storageObj
+					.getParentFolderID(), folderObj.getFolderName(), storageObj.getModule(), readCon, ctx);
 			if (folderId != -1 && folderId != folderObj.getObjectID()) {
 				/*
 				 * A duplicate folder exists
 				 */
-				throw new OXFolderException(FolderCode.NO_DUPLICATE_FOLDER, getFolderName(new OXFolderAccess(
-						readCon, ctx).getFolderObject(storageObj.getParentFolderID())), Integer.valueOf(ctx
-						.getContextId()));
+				throw new OXFolderException(FolderCode.NO_DUPLICATE_FOLDER, getFolderName(new OXFolderAccess(readCon,
+						ctx).getFolderObject(storageObj.getParentFolderID())), Integer.valueOf(ctx.getContextId()));
 			}
 		} catch (final DBPoolingException e) {
 			throw new OXFolderException(FolderCode.DBPOOLING_ERROR, e, Integer.valueOf(ctx.getContextId()));
