@@ -1,3 +1,8 @@
+* 2007-11-19 - thorben.betten@open-xchange.com
+
+ - Bugfix #10234: Fixed SQL query to lookup duplicate folders when sharing
+   a private folder
+
 * 2007-11-13 - marcus.klein@open-xchange.com
 
  - Bugfix #10117: Fixed moving problems.
